Make sure Checkout titles are aligned when there are no express payment methods

--- a/assets/js/base/components/cart-checkout/form-step/style.scss
+++ b/assets/js/base/components/cart-checkout/form-step/style.scss
@@ -36,7 +36,6 @@
 }
 
 .wc-block-checkout-step__title {
-	line-height: 1.5;
 	margin: 0 $gap-small 0 0;
 }
 
