--- a/assets/js/base/components/cart-checkout/order-summary/style.scss
+++ b/assets/js/base/components/cart-checkout/order-summary/style.scss
@@ -1,3 +1,10 @@
+.wc-block-components-order-summary {
+	.wc-blocks-components-panel__button {
+		margin-top: 0;
+		padding-top: 0;
+	}
+}
+
 .wc-block-components-order-summary__content {
 	display: table;
 	width: 100%;
