--- a/assets/js/blocks/cart-checkout/checkout/style.scss
+++ b/assets/js/blocks/cart-checkout/checkout/style.scss
@@ -13,12 +13,6 @@
 	}
 }
 
-.wc-block-checkout__main {
-	fieldset.wc-block-checkout-step:first-child {
-		margin-top: $gap-small;
-	}
-}
-
 .wc-block-checkout__sidebar {
 	.wc-block-product-name {
 		color: inherit;
